--- a/src/main/resources/startscreen.fxml
+++ b/src/main/resources/startscreen.fxml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import java.net.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.image.*?>
@@ -7,8 +11,7 @@
 <?import javafx.scene.text.*?>
 <?import java.net.URL?>
 
-<AnchorPane fx:id="root" xmlns="http://javafx.com/javafx/8.0.40"
-            xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.StartController">
+<AnchorPane fx:id="root" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.StartController">
 
     <stylesheets>
         <URL value="@stylesheet.css" />
@@ -172,13 +175,6 @@
          <RowConstraints />
          <RowConstraints />
          <RowConstraints />
-         <RowConstraints />
-         <RowConstraints />
-         <RowConstraints minHeight="50.0" />
-         <RowConstraints />
-         <RowConstraints />
-         <RowConstraints />
-         <RowConstraints />
       </rowConstraints>
       <children>
          <Text styleClass="highscoreTitleText" text="Highscore Screen" GridPane.columnIndex="0" GridPane.halignment="CENTER" GridPane.hgrow="NEVER" GridPane.rowIndex="0" GridPane.vgrow="ALWAYS" />
@@ -206,7 +202,7 @@
                </VBox>
             </children>
          </Pane>
-         <Text styleClass="highscoreTextClick" text="Click to return to the menu." GridPane.columnIndex="0" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.rowIndex="5" GridPane.vgrow="ALWAYS">
+         <Text styleClass="highscoreTextClick" text="Click to return to the menu." GridPane.columnIndex="0" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.rowIndex="2" GridPane.vgrow="ALWAYS">
             <GridPane.margin>
                <Insets />
             </GridPane.margin>
