--- a/src/main/resources/stylesheet.css
+++ b/src/main/resources/stylesheet.css
@@ -33,6 +33,24 @@
     -fx-border-width: 0 3 0 3;
 }
 
+#preferencesScreen {
+    -fx-background-color: #222222;
+    -fx-opacity: 0.99;
+    -fx-min-width: 800;
+    -fx-min-height: 600;
+    -fx-max-width: 1200;
+    -fx-max-height: 700;
+    -fx-padding: 50;
+    -fx-border-color: white;
+    -fx-border-width: 15px;
+}
+
+#preferenceTitleText {
+    -fx-underline: true;
+    -fx-font-size: 30px;
+    -fx-fill: white;
+}
+
 #helpScreen {
     -fx-background-color: #222222;
     -fx-opacity: 0.99;
